# maestro_trainer

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  startup.sh  todo.md
.github/: docker-image.yml
.github/workflows/: docker-image.yml
model_trainer/: Dockerfile  model_trainer.py  pyproject.toml  startup.sh  test_trainer.ipynb
model_trainer/src/: env_setup.py  model.py  model_trainer.py
