[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["Sean Perry <sean.hyatt.perry@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-socketio = "^5.11.3"
requests = "^2.32.3"
timm = "^1.0.9"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
